Add of DecisionTreeClassifier

--- a/progetto.ipynb
+++ b/progetto.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "9          0.702000    0.0790    0.484   78.974  1.239600e-07       0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
        "max         1.000000     244.947000  5.971860e-05  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
        "Name: labels, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -762,12 +762,12 @@
    "source": [
     "## Perceptron\n",
     "\n",
-    "- Proviamo a fare una classificazione lineare con il Perceptron"
+    "- Provo a fare una classificazione lineare con il Perceptron"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
        "0.7662716145327375"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
        "         -4.44496663,   3.61397224,  -7.45719372]])"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +854,7 @@
        "array([ -4.,  -9., -29., -59.])"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
        "3    642    404    116  12966"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1016,7 +1016,7 @@
        "array([0.73148592, 0.78169174, 0.68539143, 0.90849215])"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1044,7 @@
        "array([0.77564289, 0.68398305, 0.79762281, 0.91775198])"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1072,7 +1072,7 @@
        "array([0.75291753, 0.72958054, 0.7372604 , 0.91309859])"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1100,7 @@
        "0.7832142668718731"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,11 +1119,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.tree import DecisionTreeClassifier"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Ora provo ad utilizzare un classificatore ad albero \n",
+    "    - Il parametro max_depth serve per evitare un possibile overfitting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8520713252595903"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = Pipeline([\n",
+    "    (\"scale\", StandardScaler()),\n",
+    "    (\"tree\", DecisionTreeClassifier(max_depth=6))\n",
+    "])\n",
+    "\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "model.score(X_val, y_val)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Il modello è più accurato di quello precedente, e aumentando il max_depth potrebbe migliorare ancora il risultato"
    ]
   }
  ],
